# test-boilerplate-releases

./: CMakeLists.txt
.github/workflows/: cmake.yml
